# paper-pilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: ARCHITECTURE.md  CLIENTS.md  EXTRAS.md  PUBLISHING.md
examples/: cursor.mcp.json  sample-citation-graph.html  sample-report.md
src/paper_pilot/: __init__.py  __main__.py  cli.py  config.py  demo.py  models.py  server.py
src/paper_pilot/services/: academic.py  content.py  deep_read.py  graphing.py  libgen.py  net.py  open_access.py  reporting.py  scihub.py  zotero.py
tests/: test_cli.py  test_config.py  test_content.py  test_deep_read.py  test_graphing.py  test_healthcheck.py  test_net.py  test_open_access.py  test_ranking.py  test_reporting.py  test_scihub.py  test_server_pdf.py  test_sources.py  test_zotero.py
