[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-pilot"
version = "0.6.3"
description = "Your AI's research copilot. Searches 6 academic databases, downloads real PDFs, reads them cover to cover, extracts evidence, renders figures. MCP server for Claude, Codex & any AI agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "aytzey" }
]
keywords = [
  "mcp",
  "mcp-server",
  "deep-research",
  "research-agent",
  "academic-search",
  "open-access",
  "pdf",
  "llm-tools",
  "zotero",
  "semantic-scholar",
  "openalex",
  "arxiv",
  "literature-review",
  "paper-download",
  "ai-agent",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28.1",
  "lxml>=6.0.2",
  "mcp>=1.12.4",
  "PyMuPDF>=1.24.0",
  "python-dotenv>=1.2.2",
  "pyzotero>=1.6.11",
  "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/aytzey/paper-pilot"
Repository = "https://github.com/aytzey/paper-pilot"
Issues = "https://github.com/aytzey/paper-pilot/issues"
Documentation = "https://github.com/aytzey/paper-pilot#readme"
Changelog = "https://github.com/aytzey/paper-pilot/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
paper-pilot = "paper_pilot.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["B008", "E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/paper_pilot"]
